[tool.poetry]
name = "pydebuginfod"
version = "0.1.0"
license = "MIT"
description = "A python client for the debuginfod server"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
